--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -499,8 +499,9 @@ a.btn:hover ,.main_menu .blk_btn:hover{
 	color: #fff;
 }
 .single_counter {
-	padding: 35px 24px;
-	border: 1px double rgb(137, 133, 133 ,.5);
+    padding: 35px 24px;
+    border: 1px double rgb(137, 133, 133 ,.5);
+    border-radius: 0 30px 0 30px;
 }
 .single_counter i {
 	font-size: 42px;
